--- a/projet-final-main/htmlquiz.html
+++ b/projet-final-main/htmlquiz.html
@@ -58,15 +58,20 @@
           <div class="options">!DOCTYPE html</div>
           <div class="options">!DOCTYPE html PUBLIC "-//W3C//DTD HTML5.0 Strict//EN"</div>
         </div>
+        <div class="next-question-btn">
+          <button type="button" class="btn">Next</button>
+        </div>
+        <div class="answer-indicator">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
-      <div class="next-question-btn">
-        <button type="button" class="btn">Next</button>
+
+      <div class="result-box custom-box">
+
       </div>
-      <div class="answer-indicator">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
+      
       <!-- 
         <main class="quiz">
         <h1>Quiz HTML5</h1>
